[package]
name = "sky-snapshotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
containerd-snapshots = "0.2.0"
tokio = { version = "1.27.0", features = ["full"] }
simple_logger = { version  = "4.0", default-features = false }
futures = "0.3"
log = "0.4"
tokio-stream = { version = "0.1.12", features = ["net"] }
async-stream = "0.3.5"
reqwest = "0.11.16"
json = "*"
regex = "1.7.3"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3.16"
serde_json = "1.0.96"
tracing = "0.1.37"
http = "0.2.9"
