[package]
name = "sky-snapshotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# containerd-snapshots = "0.2.0"
containerd-snapshots = {path = "../../rust-extensions/crates/snapshots"}
tokio = { version = "1.27.0", features = ["full"] }
simple_logger = { version  = "4.0", default-features = false }
futures = "0.3"
log = "0.4"
tokio-stream = { version = "0.1.12", features = ["net"] }
async-stream = "0.3.5"
reqwest = { version = "0.11.16", features = ["stream", "gzip"] }
json = "*"
regex = "1.7.3"
tower-http = { version = "0.4.0", features = ["trace"] }
tracing-subscriber = "0.3.16"
serde_json = "1.0.96"
tracing = "0.1.37"
http = "0.2.9"
tokio-rusqlite = "0.4.0"
async-tar = "0.4.2"
tokio-tar = "0.3.0"
async-compression = { version = "0.3.15", features = ["futures-io", "tokio", "gzip", "zstd"] }
tar = "0.4.38"
flate2 = "1.0"
tokio-util = { version = "0.7.7", features = ["io"]}
bytes = "1.4.0"
ringbuf = "0.3.3"
pin-project-lite = "0.2.9"
tokio-pipe = "0.2.12"
os_pipe = "1.1.4"
unix-named-pipe = "0.2.0"
async-ringbuf = { version = "0.1.3", features = ["impl-tokio"] }
oci-spec = "0.6.0"
minstant = "0.1.2"
indicatif = "0.17.4"
serde = { version = "1.0.163", features = ["derive"] }
vmm-sys-util = "0.11.1"
